# kraislauf

./: .cz.toml  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  zsh-config.sh
.github/workflows/: README.md  ci.yml  deploy.yml  infrastructure.yml
backend/: README.md  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/models/: chat.py
backend/app/services/: langchain_mock.py
backend/tests/: test_chat.py
docs/: README.md  api.md  architecture.md
frontend/: .eslintrc.js  README.md  jest.config.js  next.config.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/components/: ChatBox.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: index.tsx
frontend/src/styles/: globals.css
infra/: README.md  main.tf  manage-ip-whitelist.sh  outputs.tf  setup-github-oidc.sh  setup_iac_backend.sh  variables.tf
scripts/: test-prod-parity.sh
