[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kraislauf-backend"
version = "0.1.0"
description = "kraislauf backend API"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Lukas Heidegger"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "python-dotenv",
    "langchain",
    "langchain-openai",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "httpx",
    "uvicorn>=0.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
# Enable pycodestyle ('E'), Pyflakes ('F'), isort ('I') and Black-compatible formatter ('B')
select = ["E", "F", "I", "B"]
ignore = []
line-length = 120
target-version = "py312"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "venv",
    "docs",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", "tests", "**/node_modules", "**/.*"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
